[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[workspace]
members = [
    "SharedModule",
    "ServerModule", 
    "ClientModule",
    "CustomServerModule",
]

[workspace.dependencies]
spacetimedb = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
sha2 = "0.10"

# For FFI
libc = "0.2"

[build-dependencies]
cbindgen = "0.24"

[[bin]]
name = "generate_bindings"
path = "src/bin/generate_bindings.rs"

[features]
default = ["spacetimedb-build"]
spacetimedb-build = []

# Optimize for release builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Development builds with debug info
[profile.dev]
opt-level = 0
debug = true

