# ClientModule/Cargo.toml
[package]
name = "client_module"
version.workspace = true
edition.workspace = true

# Compile as both a regular library and a dynamic library
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# Workspace dependencies
spacetimedb = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

# Dependency on SharedModule for common types
shared_module = { path = "../SharedModule" }

# Client-specific dependencies for FFI and networking
libc = "0.2"             # For C-compatible types in FFI functions
parking_lot = { workspace = true }     # For efficient thread synchronization
lazy_static = { workspace = true }      # For global state management

# Optional dependencies for advanced features
tungstenite = { version = "0.20", optional = true }  # WebSocket support

# Feature flags allow conditional compilation
[features]
default = []
websocket = ["tungstenite"]