# ServerModule/Cargo.toml
[package]
name = "server_module"
version.workspace = true
edition.workspace = true

# This is crucial: tells Rust to compile this as a dynamic library
# that SpacetimeDB can load as a WebAssembly module
[lib]
crate-type = ["cdylib"]

[dependencies]
# Workspace dependencies this module needs
spacetimedb = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

# Our own SharedModule - this creates the dependency relationship
shared_module = { path = "../SharedModule" }

# Server-specific dependencies that other modules don't need
bcrypt = "0.15"          # For secure password hashing
rand = "0.8"             # For generating random values
chrono = { version = "0.4", features = ["serde"] }  # For timestamp handling